--- a/new_pages/cleaning.Rmd
+++ b/new_pages/cleaning.Rmd
@@ -1346,8 +1346,14 @@ linelist <- linelist_raw %>%
     rename(date_infection       = infection_date,
            date_hospitalisation = hosp_date,
            date_outcome         = date_of_outcome) %>% 
-    
-    # 以上是上游清洗步骤已经讨论过了
+      
+    # 删除列
+    select(-c(row_num, merged_header, x28)) %>% 
+  
+    # 数据去重
+    distinct() %>% 
+
+      # 以上是上游清洗步骤已经讨论过了
     #####################################################
     # 添加新列
     mutate(bmi = wt_kg / (ht_cm/100)^2) %>% 
@@ -1467,21 +1473,30 @@ table(linelist$hospital, useNA = "always")
 
 <span style="color: darkgreen;">**_TIP:_** Sometimes a *blank* character value exists in a dataset (not recognized as R's value for missing - `NA`). You can reference this value with two quotation marks with no space inbetween ("").</span>  
 
+<span style="color: darkgreen;">**_提示：_** 等号前后的空格数无关紧要。通过对齐所有或大多数行的 = 使您的代码更易于阅读。另外，可以考虑添加一行对应位置的注释，注明哪一边是原值，哪一边是新值。</span>  
+
+<span style="color: darkgreen;">**_提示：_** 有时数据集中存在*空白*字符值（不被识别为R的缺省值 -`NA`）。可以使用中间没有空格的双引号 （""） 引用此值。</span>  
 
 
 
 ### By logic {.unnumbered}
+### 按逻辑 {.unnumbered}
 
 Below we demonstrate how to re-code values in a column using logic and conditions:  
 
 * Using `replace()`, `ifelse()` and `if_else()` for simple logic
 * Using `case_when()` for more complex logic  
 
+下面演示如何使用逻辑和条件重新编码列中的值：
 
+* 简单逻辑：使用`replace()`, `ifelse()`和`if_else()`
+* 复杂逻辑：使用`case_when()`
 
 ### Simple logic {.unnumbered}  
+### 简单逻辑 {.unnumbered}
 
 
+#### `replace()` {.unnumbered}  
 #### `replace()` {.unnumbered}  
 
 To re-code with simple logical criteria, you can use `replace()` within `mutate()`. `replace()` is a function from **base** R. Use a logic condition to specify the rows to change . The general syntax is:  
@@ -1490,13 +1505,29 @@ To re-code with simple logical criteria, you can use `replace()` within `mutate(
 
 One common situation to use `replace()` is **changing just one value in one row, using an unique row identifier**. Below, the gender is changed to "Female" in the row where the column `case_id` is "2195".  
 
+要使用简单逻辑条件重新编码，可以在`mutate()`内使用`replace()`。 `replace()`是**base** R的函数。使用逻辑条件指定要更改的行的一般语法是：
+
+`mutate(拟处理行 = replace(拟处理行, 行选取条件, 新值))`
+
+一种常见的使用`replace()`的情况是`使用唯一的行标识符仅更改一行中的一个值`。下面，将`case_id`列值为“2195”所在行的性别值更改为“女性”。
+
+
 ```{r, eval=F}
 # Example: change gender of one specific observation to "Female" 
 linelist <- linelist %>% 
   mutate(gender = replace(gender, case_id == "2195", "Female"))
 ```
 
+```{r, eval=F}
+# 示例：更改一个特定观测的性别为“女性” 
+linelist <- linelist %>% 
+  mutate(gender = replace(gender, case_id == "2195", "Female"))
+```
+
+
 The equivalent command using **base** R syntax and indexing brackets `[ ]` is below. It reads as "Change the value of the dataframe `linelist`'s column `gender` (for the rows where `linelist`'s column `case_id` has the value  '2195') to 'Female' ".   
+
+使用**base** R语法和索引括号`[ ]`的等效命令如下。它读作“将`linelist`数据框`case_id`值为'2195'所有行的`gender`列值更改为'女性'”。
 
 ```{r, eval=F}
 linelist$gender[linelist$case_id == "2195"] <- "Female"
@@ -1506,11 +1537,16 @@ linelist$gender[linelist$case_id == "2195"] <- "Female"
 
 
 #### `ifelse()` and `if_else()` {.unnumbered}  
+#### `ifelse()` 和 `if_else()` {.unnumbered}  
 
 Another tool for simple logic is `ifelse()` and its partner `if_else()`. However, in most cases for re-coding it is more clear to use `case_when()` (detailed below). These "if else" commands are simplified versions of an `if` and `else` programming statement. The general syntax is:  
 `ifelse(condition, value to return if condition evaluates to TRUE, value to return if condition evaluates to FALSE)` 
 
+另一个用于简单逻辑的工具是`ifelse()`及类似函数`if_else()`。但是，在大多数情况下，对于重新编码，`case_when()`使用起来更清晰（详情如下）。这些“if else”命令是`if`和`else`编程语句的简化版本。一般语法是：
+`ifelse(逻辑条件, 条件为真时应返回的值, 条件为假时应返回的值)`
+
 Below, the column `source_known` is defined. Its value in a given row is set to "known" if the row's value in column `source` is *not* missing. If the value in `source` *is* missing, then the value in `source_known` is set to "unknown".  
+下面，`source_known`被的换算出来，如果`source`列*不是*缺省值，则其值是“known”；否则为“unknown”。
 
 ```{r, eval=F}
 linelist <- linelist %>% 
@@ -1519,13 +1555,24 @@ linelist <- linelist %>%
 
 `if_else()` is a special version from **dplyr** that handles dates. Note that if the 'true' value is a date, the 'false' value must also qualify a date, hence using the special value `NA_real_` instead of just `NA`.
 
+`if_else()`则是`dplyr`包中用于处理日期的一个特殊版本。请注意，如果条件'TRUE' 时返回值是日期，则 'FALSE'返回值也必须限定为日期，如果要返回缺省值则应使用特殊值`NA_real_`而不是`NA`。
+
 ```{r, eval=F}
 # Create a date of death column, which is NA if patient has not died.
 linelist <- linelist %>% 
   mutate(date_death = if_else(outcome == "Death", date_outcome, NA_real_))
 ```
 
+```{r, eval=F}
+# 创建一个死亡日期列，如果病例未死亡则值为NA。
+linelist <- linelist %>% 
+  mutate(date_death = if_else(outcome == "Death", date_outcome, NA_real_))
+```
+
+
 **Avoid stringing together many ifelse commands... use `case_when()` instead!** `case_when()` is much easier to read and you'll make fewer errors.  
+
+**避免将很多ifelse命令行串在一起使用……请改用`case_when()`！** `case_when()` 更易阅读且少出错误。
 
 ```{r, fig.align = "center", out.width = "100%", echo=F}
 knitr::include_graphics(here::here("images", "ifelse bad.png"))
@@ -1533,10 +1580,12 @@ knitr::include_graphics(here::here("images", "ifelse bad.png"))
 
 Outside of the context of a data frame, if you want to have an object used in your code switch its value, consider using `switch()` from **base** R.  
 
-
+在数据框范围外，如果要让代码中使用的对象切换取值，请考虑使用**base** R的`switch()`。
 
 
 ### Complex logic {#clean_case_when .unnumbered}  
+### 复杂逻辑 {#clean_case_when .unnumbered}  
+
 
 Use **dplyr**'s `case_when()` if you are re-coding into many new groups, or if you need to use complex logic statements to re-code values. This function evaluates every row in the data frame, assess whether the rows meets specified criteria, and assigns the correct new value.  
 
@@ -1544,6 +1593,11 @@ Use **dplyr**'s `case_when()` if you are re-coding into many new groups, or if y
 
 For example, here we utilize the columns `age` and `age_unit` to create a column `age_years`:  
 
+如果要重新编码成很多新组，或者要使用复杂的逻辑语句重码值，请使用**dplyr**包的`case_when()`。此函数评估数据框中的每一行是否满足指定条件，并分配正确的新值。
+
+case_when()命令由以“波浪号”`~`分隔开来的右侧 (RHS) 和左侧 (LHS) 的语句组成，产生的新值在每个语句的右侧。语句用逗号分隔。
+
+例如，下面我们用列`age`和`age_unit`创建一个新列`age_years`：
 
 ```{r}
 linelist <- linelist %>% 
@@ -1554,27 +1608,48 @@ linelist <- linelist %>%
             TRUE                 ~ NA_real_)) # any other circumstance, assign missing
 ```
 
+```{r}
+linelist <- linelist %>% 
+  mutate(age_years = case_when(
+            age_unit == "years"  ~ age,       # 如果年龄单位是年
+            age_unit == "months" ~ age/12,    # 如果年龄单位是月
+            is.na(age_unit)      ~ age,       # 如果年龄单位缺省，则默认为年
+            TRUE                 ~ NA_real_)) # 其他情况赋值为缺省值
+```
+
 
 As each row in the data is evaluated, the criteria are applied/evaluated in the order the `case_when()` statements are written - from top-to-bottom. If the top criteria evaluates to `TRUE` for a given row, the RHS value is assigned, and the remaining criteria are not even tested for that row. Thus, it is best to write the most specific criteria first, and the most general last.  
 
+`case_when()`语句将按照逻辑条件编写顺序自上而下对数据框逐行应用/评估。如果某行用上位逻辑条件评估为`TRUE`的话，则会分配右侧值；其他余下的逻辑条件不会再去评估该行。因此，最好先编写最具体的条件，最后编写最通用的条件。
+
 Along those lines, in your final statement, place `TRUE` on the left-side, which will capture any row that did not meet any of the previous criteria. The right-side of this statement could be assigned a value like "check me!" or missing.  
+
+除了那些逻辑条件行之外，最后一行建议在左侧设置`TRUE`以框定那些未符合之前所有逻辑条件的行。那么这句的右侧应该赋值为“待核查”或缺省值。
 
 
 <span style="color: red;">**_DANGER:_** **Vvalues on the right-side must all be the same class** - either numeric, character, date, logical, etc. To assign missing (`NA`), you may need to use special variations of `NA` such as `NA_character_`, `NA_real_` (for numeric or POSIX), and `as.Date(NA)`. Read more in [Working with dates].</span>  
 
 
+<span style="color: red;">**_危险：_** **右侧的值必须是同一类型** - 数值、字符、日期、逻辑等任意一种。 要赋缺省值（`NA`），需用`NA`的变体，如`NA_character_`, `NA_real_` （用于数值或日期时间型）和 `as.Date(NA)`。更多信息参阅[处理日期]章节。</span>  
 
 
 ### Missing values {.unnumbered} 
+### 缺省值 {.unnumbered}
 
 Below are special functions for handling missing values in the context of data cleaning.  
 
 See the page on [Missing data] for more detailed tips on identifying and handling missing values. For example, the `is.na()` function which logically tests for missingness.  
 
+以下是在数据清洗中处理缺失值的特殊函数。
+
+有关识别和处理缺失值的更多技巧，请参阅[缺省数据]章节。例如，用于逻辑判断缺省值 的函数`is.na()`。
+
 
 **`replace_na()`**  
 
 To change missing values (`NA`) to a specific value, such as "Missing", use the **dplyr** function `replace_na()` within `mutate()`. Note that this is used in the same manner as `recode` above - the name of the variable must be repeated within `replace_na()`.  
+
+可以在`mutate()`函数里使用**dplyr**包的`replace_na()`函数，将诸如“Missing”一类的特定缺省值替换成缺省值（`NA`）。请注意，它的使用方式与上述的`recode`相同- 必须在`replace_na()`内重复提供拟处理的变量名称。
 
 ```{r}
 linelist <- linelist %>% 
@@ -1586,9 +1661,16 @@ linelist <- linelist %>%
 
 This is a function from the **forcats** package. The **forcats** package handles columns of class Factor. Factors are R's way to handle *ordered* values such as `c("First", "Second", "Third")` or to set the order that values (e.g. hospitals) appear in tables and plots. See the page on [Factors].  
 
+这是专门处理因子的**forcats**包中的一个函数。因子是 R 处理有序值，如`c("First", "Second", "Third")`或设置值（例如医院）在表格和图中的出现顺序的方式。请参阅[因子]章节。
+
+
 If your data are class Factor and you try to convert `NA` to "Missing" by using `replace_na()`, you will get this error: `invalid factor level, NA generated`. You have tried to add "Missing" as a value, when it was not defined as a possible level of the factor, and it was rejected.  
 
 The easiest way to solve this is to use the **forcats** function `fct_explicit_na()` which converts a column to class factor, and converts `NA` values to the character "(Missing)".  
+
+如果用`replace_na()`把数据中的因子类的`NA`值更改为“Missing”，会出现以下错误提示：`非法的因子水平，将产生缺省值（invalid factor level, NA generated）`。要为因子添加“Missing”值，但未将其定义成其因子水平的话，该操作将被拒绝。
+
+解决此问题的最简单方法是使用`forcats`包里的`fct_explicit_na()`函数。该函数可将列转换为因子，并将`NA`值转换为字符“(Missing)”。
 
 ```{r, eval=F}
 linelist %>% 
@@ -1596,10 +1678,13 @@ linelist %>%
 ```
 
 A slower alternative would be to add the factor level using `fct_expand()` and then convert the missing values.  
+较慢的替代方法是使用`fct_expand()`添加因子级别，并转换为缺省值。
 
 **`na_if()`**  
 
 To convert a *specific value to* `NA`, use **dplyr**'s `na_if()`. The command below performs the opposite operation of `replace_na()`. In the example below, any values of "Missing" in the column `hospital` are converted to `NA`.  
+
+要将*特定值*转换为`NA`，请使用**dplyr**包里的`na_if()`。下面的命令执行与`replace_na()` 的相反操作。在下面的示例中，`hospital`列中“缺省”的任何值都将转换为`NA`。
 
 ```{r}
 linelist <- linelist %>% 
@@ -1607,6 +1692,7 @@ linelist <- linelist %>%
 ```
 
 Note: `na_if()` **cannot be used for logic criteria** (e.g. "all values > 99") - use `replace()` or `case_when()` for this:  
+注意：`na_if()` **不能作为逻辑条件**（如“所有值>99”），可用`replace()` 或 `case_when()` 。
 
 ```{r, eval=F}
 # Convert temperatures above 40 to NA 
@@ -1619,11 +1705,24 @@ linelist <- linelist %>%
 ```
 
 
+```{r, eval=F}
+# 将40度以上转换为NA 
+linelist <- linelist %>% 
+  mutate(temp = replace(temp, temp > 40, NA))
+
+# 将早于2000年1月1日的发病日期转换为缺省值
+linelist <- linelist %>% 
+  mutate(date_onset = replace(date_onset, date_onset > as.Date("2000-01-01"), NA))
+```
+
+
 
 
 ### Cleaning dictionary {.unnumbered}
+### 清洗字典 {.unnumbered}
 
 Use the R package **linelist** and it's function `clean_variable_spelling()` to clean a data frame with a *cleaning dictionary*. **linelist** is a package developed by [RECON](https://github.com/reconhub/linelist) - the R Epidemics Consortium.  
+应用**linelist**包的`clean_variable_spelling()`函数，导入*清洗字典*来清洗数据框数据。该包是由[流行病联盟RECON](https://github.com/reconhub/linelist)研发制作的。
 
 1) Create a cleaning dictionary with 3 columns:  
     * A "from" column (the incorrect value)  
@@ -1632,12 +1731,20 @@ Use the R package **linelist** and it's function `clean_variable_spelling()` to 
 
 Note: .global dictionary entries will be overridden by column-specific dictionary entries.  
 
+1）创建一个3行的清洗字典：
+    * 一个“from”列（不正确值）
+    * 一个“to”gqj （正确值）
+    * 一个拟处理的指定列（或者用“.global”应用于全部列）
+    
+注意： .global 字典条目将被列特定的字典条目覆盖。
+
 ```{r, fig.align = "center", out.width = "100%", echo=F}
 knitr::include_graphics(here::here("images", "cleaning_dict.png"))
 ```
 
 
 2) Import the dictionary file into R. This example can be downloaded via instructions on the [Download handbook and data] page.  
+2）向R导入字典文件。这个示例可以在[手册和数据下载]章节下载。
 
 ```{r, echo=F}
 cleaning_dict <- rio::import(here("data", "case_linelists", "cleaning_dict.csv"))
@@ -1649,6 +1756,8 @@ cleaning_dict <- import("cleaning_dict.csv")
 
 3) Pass the raw linelist to `clean_variable_spelling()`, specifying to `wordlists = ` the cleaning dictionary data frame. The `spelling_vars = ` argument can be used to specify which column in the dictionary refers to the columns (3rd by default), or can be set to `NULL` to have the dictionary apply to all character and factor columns. Note this function can take a long time to run.  
 
+3）将原始linelist传递给`clean_variable_spelling()`，把清理字典数据框指定到`wordlists =`。`spelling_vars =`参数可用于指定字典数据框中哪列中存放拟清洗列名值（默认为第三列），或者可以设置为`NULL`使字典应用于拟清洗数据框的所有字符和因子列。请注意，此功能可能要运行很长时间。
+
 ```{r}
 linelist <- linelist %>% 
   linelist::clean_variable_spelling(
@@ -1656,24 +1765,37 @@ linelist <- linelist %>%
     spelling_vars = "col",        # dict column containing column names, defaults to 3rd column in dict
   )
 ```
+```{r}
+linelist <- linelist %>% 
+  linelist::clean_variable_spelling(
+    wordlists = cleaning_dict,
+    spelling_vars = "col",        # 包含拟清洗列名的字典数据框列名，默认是字典的第三列
+  )
+```
 
 Now scroll to the right to see how values have changed - particularly `gender` (lowercase to uppercase), and all the symptoms columns have been transformed from yes/no to 1/0.  
+
+现在滚动右侧看看各列值发生了怎么样的变化 - 特别是`gender`（小写到大写），并且所有症状列都从是/否转换为 1/0。
 
 ```{r message=FALSE, echo=F}
 # display the linelist data as a table
 DT::datatable(head(linelist,50), rownames = FALSE, filter="top", options = list(pageLength = 5, scrollX=T), class = 'white-space: nowrap' )
 ```
-
+```{r message=FALSE, echo=F}
+# 一览表数据显示为表格
+DT::datatable(head(linelist,50), rownames = FALSE, filter="top", options = list(pageLength = 5, scrollX=T), class = 'white-space: nowrap' )
+```
 
 Note that your column names in the cleaning dictionary must correspond to the names *at this point* in your cleaning script. See this [online reference for the linelist package](https://www.repidemicsconsortium.org/linelist/reference/clean_data.html) for more details.
 
-
-
+请注意，清理字典中的列名称必须与清理脚本中*此时*的名称相对应。有关详细信息，请参阅 [linelist包在线参考资料](https://www.repidemicsconsortium.org/linelist/reference/clean_data.html)。
 
 
 #### Add to pipe chain {.unnumbered}  
+#### 添加到管道链 {.unnumbered}  
 
 **Below, some new columns and column transformations are added to the pipe chain.**  
+**下面，一些新列和完成转换的列都被添加到管道链中**
 
 ```{r}
 # CLEANING 'PIPE' CHAIN (starts with raw data and pipes it through cleaning steps)
@@ -1734,6 +1856,65 @@ linelist <- linelist_raw %>%
           TRUE ~ NA_real_))
 ```
 
+```{r}
+# 数据清洗“管道”链（以原始数据开始，然后将其传递给数据清洗步骤）
+##################################################################################
+
+# 数据清洗管道链开始
+###########################
+linelist <- linelist_raw %>%
+    
+    # 标准化列名语法
+    janitor::clean_names() %>% 
+    
+    # 手动重命名列
+           # 新名               # 原名
+    rename(date_infection       = infection_date,
+           date_hospitalisation = hosp_date,
+           date_outcome         = date_of_outcome) %>% 
+      
+    # 删除列
+    select(-c(row_num, merged_header, x28)) %>% 
+  
+    # 数据去重
+    distinct() %>% 
+
+    # 添加新列
+    mutate(bmi = wt_kg / (ht_cm/100)^2) %>% 
+  
+    # 转换一些列的类
+    mutate(across(contains("date"), as.Date), 
+           generation = as.numeric(generation),
+           age        = as.numeric(age)) %>% 
+      
+    # 新增列：入院延迟
+    mutate(days_onset_hosp = as.numeric(date_hospitalisation - date_onset)) %>% 
+    
+    # 以上是上游清洗步骤已经讨论过了
+    #####################################################
+
+  # 清洗hospital列的值
+    mutate(hospital = recode(hospital,
+                      # 原值              = 新值
+                      "Mitylira Hopital"  = "Military Hospital",
+                      "Mitylira Hospital" = "Military Hospital",
+                      "Military Hopital"  = "Military Hospital",
+                      "Port Hopital"      = "Port Hospital",
+                      "Central Hopital"   = "Central Hospital",
+                      "other"             = "Other",
+                      "St. Marks Maternity Hopital (SMMH)" = "St. Mark's Maternity Hospital (SMMH)"
+                      )) %>% 
+    
+    mutate(hospital = replace_na(hospital, "Missing")) %>% 
+
+    # 创建age_year列（用age和age_unit两列）
+    mutate(age_years = case_when(
+          age_unit == "years" ~ age,
+          age_unit == "months" ~ age/12,
+          is.na(age_unit) ~ age,
+          TRUE ~ NA_real_))
+
+```
 
 
 
@@ -1743,6 +1924,7 @@ linelist <- linelist_raw %>%
 <!-- ======================================================= -->
 <!-- ======================================================= -->
 ## Numeric categories {#num_cats}
+## 数值分组 {#num_cats}
 
 
 Here we describe some special approaches for creating categories from numerical columns. Common examples include age categories, groups of lab values, etc. Here we will discuss:  
@@ -1752,20 +1934,41 @@ Here we describe some special approaches for creating categories from numerical 
 * `case_when()`  
 * quantile breaks with `quantile()` and `ntile()` 
 
+在这里，我们讨论一些从数值列创建分组的特殊方法。常见的例子包括年龄组别、实验室数据分组等。这里我们将讨论：
+
+* `age_categories()`，来自**epikit**包
+* `cut()`, 来自**base** R
+* `case_when()`
+* 分位数，可由`quantile()`和`ntile()`生成
+
+
 
 ### Review distribution {.unnumbered}
+### 检查分布 {.unnumbered}
 
 For this example we will create an `age_cat` column using the `age_years` column.  
+
+本例中，将用`age_years`列创建`age_cat`列。
 
 ```{r}
 #check the class of the linelist variable age
 class(linelist$age_years)
 ```
+```{r}
+#检查linelist数据集中age变量的类
+class(linelist$age_years)
+```
 
 First, examine the distribution of your data, to make appropriate cut-points. See the page on [ggplot basics].  
 
+首先，检查数据的分布，以确定适当的切点。请参阅[ggplot 基础知识]章节。
+
 ```{r, out.height='50%'}
 # examine the distribution
+hist(linelist$age_years)
+```
+```{r, out.height='50%'}
+# 检查分布
 hist(linelist$age_years)
 ```
 
@@ -1774,6 +1977,8 @@ summary(linelist$age_years, na.rm=T)
 ```
 
 <span style="color: orange;">**_CAUTION:_** Sometimes, numeric variables will import as class "character". This occurs if there are non-numeric characters in some of the values, for example an entry of "2 months" for age, or (depending on your R locale settings) if a comma is used in the decimals place (e.g. "4,5" to mean four and one half years)..</span>
+
+<span style="color: orange;">**_注意_** 有时，数值变量会以“字符”类导入。这一般发生在以下情况下：如果某些值中存在非数字字符，例如年龄录入“2 个月”，或者（取决于您的 R 语言环境设置）如果在小数位使用逗号（例如“4， 5”表示四年半）。</span>
 
 
 <!-- ======================================================= -->
@@ -1787,6 +1992,15 @@ Here are the required inputs:
 * The `breakers = ` argument - provide a numeric vector of break points for the new groups  
 
 First, the simplest example:  
+
+可使用**epikit**包的`age_categories()`函数轻松对数值列进行分类和标记（注意：此函数也可以应用于非年龄数字变量）。作为福利，输出列自动是一个有序因子。
+
+以下是所需的输入：
+
+* 一个数值向量（列）
+* `breakers =`参数-提供新组的数值分界点
+
+首先，最简单的例子：
 
 ```{r}
 # Simple example
@@ -1804,7 +2018,25 @@ linelist <- linelist %>%
 table(linelist$age_cat, useNA = "always")
 ```
 
+```{r}
+# 简单的例子
+################
+pacman::p_load(epikit)                    # 加载包
+
+linelist <- linelist %>% 
+  mutate(
+    age_cat = age_categories(             # 创建新列
+      age_years,                            # 创建分组的原数值列
+      breakers = c(0, 5, 10, 15, 20,        # 分界点
+                   30, 40, 50, 60, 70)))
+
+# 表格呈现
+table(linelist$age_cat, useNA = "always")
+```
+
 The break values you specify are by default the lower bounds - that is, they are included in the "higher" group / the groups are "open" on the lower/left side. As shown below, you can add 1 to each break value to achieve groups that are open at the top/right.
+
+默认情况下，您指定的分界值默认是下限 - 也就是说，这个界值包含在“较高”组中，或者说新创建组的低值/左侧是开区间。如下所示，您可以将每个分界值加 1，这样高值/右侧就会是开区间。
  
 ```{r}
 # Include upper ends for the same categories
@@ -1818,11 +2050,28 @@ linelist <- linelist %>%
 # show table
 table(linelist$age_cat, useNA = "always")
 ```
+ 
+```{r}
+# 相同分组中包含高值点
+############################################
+linelist <- linelist %>% 
+  mutate(
+    age_cat = age_categories(
+      age_years, 
+      breakers = c(0, 6, 11, 16, 21, 31, 41, 51, 61, 71)))
+
+# 显示表格
+table(linelist$age_cat, useNA = "always")
+```
 
 
 You can adjust how the labels are displayed with `separator = `. The default is "-"  
 
 You can adjust how the top numbers are handled, with the `ceiling = ` arguemnt. To set an upper cut-off set `ceiling = TRUE`. In this use, the highest break value provided is a "ceiling" and a category "XX+" is not created. Any values above highest break value (or to `upper = `, if defined) are categorized as `NA`. Below is an example with `ceiling = TRUE`, so that there is no category of XX+ and values above 70 (the highest break value) are assigned as NA.  
+
+可使用`separator = `调整标签分隔符。默认为“-”
+
+可使用`ceiling =`参数调整处理最高数字的方式。设置上限截止参数`ceiling = TRUE`后，提供的最高分界值是“天花板”，并且不会创建类别“XX+”。任何高于最高分界值（或已经定义`upper =`值）的值都归类为`NA`。下面是一个带有`ceiling = TRUE`的示例，因此不存在XX+组别，并且将 70（最高分界值）以上的值指定为`NA`。
 
 ```{r}
 # With ceiling set to TRUE
@@ -1837,12 +2086,31 @@ linelist <- linelist %>%
 # show table
 table(linelist$age_cat, useNA = "always")
 ```
+```{r}
+# ceiling参数设置为TRUE
+##########################
+linelist <- linelist %>% 
+  mutate(
+    age_cat = age_categories(
+      age_years, 
+      breakers = c(0, 5, 10, 15, 20, 30, 40, 50, 60, 70),
+      ceiling = TRUE)) # 70是天花板，所有大于70的值都变为NA
+
+# 显示表格
+table(linelist$age_cat, useNA = "always")
+```
 
 Alternatively, instead of `breakers = `, you can provide all of `lower = `, `upper = `, and `by = `:  
 
 * `lower = ` The lowest number you want considered - default is 0  
 * `upper = ` The highest number you want considered  
 * `by = `    The number of years between groups  
+
+或者不用`breakers =`，可提供所有的`lower =`，`upper =`以及`by =`：
+
+* `lower =` 想设置的最低数字 - 默认为 0
+* `upper =` 想设置的最高数字
+* `by =`    组间隔年数
 
 ```{r}
 linelist <- linelist %>% 
@@ -1859,6 +2127,8 @@ table(linelist$age_cat, useNA = "always")
 
 
 See the function's Help page for more details (enter `?age_categories` in the R console). 
+更多信息，请参阅相关函数帮助 （在R控制台输入运行`?age_categories`即可）。 
+
 
 
 <!-- ======================================================= -->
@@ -2093,6 +2363,72 @@ linelist <- linelist_raw %>%
 ```
 
 
+```{r}
+# 数据清洗“管道”链（以原始数据开始，然后将其传递给数据清洗步骤）
+##################################################################################
+
+# 数据清洗管道链开始
+###########################
+linelist <- linelist_raw %>%
+    
+    # 标准化列名语法
+    janitor::clean_names() %>% 
+    
+    # 手动重命名列
+           # 新名               # 原名
+    rename(date_infection       = infection_date,
+           date_hospitalisation = hosp_date,
+           date_outcome         = date_of_outcome) %>% 
+      
+    # 删除列
+    select(-c(row_num, merged_header, x28)) %>% 
+  
+    # 数据去重
+    distinct() %>% 
+
+    # 添加新列
+    mutate(bmi = wt_kg / (ht_cm/100)^2) %>% 
+  
+    # 转换一些列的类
+    mutate(across(contains("date"), as.Date), 
+           generation = as.numeric(generation),
+           age        = as.numeric(age)) %>% 
+      
+    # 新增列：入院延迟
+    mutate(days_onset_hosp = as.numeric(date_hospitalisation - date_onset)) %>% 
+    
+  # 清洗hospital列的值
+    mutate(hospital = recode(hospital,
+                      # 原值              = 新值
+                      "Mitylira Hopital"  = "Military Hospital",
+                      "Mitylira Hospital" = "Military Hospital",
+                      "Military Hopital"  = "Military Hospital",
+                      "Port Hopital"      = "Port Hospital",
+                      "Central Hopital"   = "Central Hospital",
+                      "other"             = "Other",
+                      "St. Marks Maternity Hopital (SMMH)" = "St. Mark's Maternity Hospital (SMMH)"
+                      )) %>% 
+    
+    mutate(hospital = replace_na(hospital, "Missing")) %>% 
+
+    # 创建age_year列（用age和age_unit两列）
+    mutate(age_years = case_when(
+          age_unit == "years" ~ age,
+          age_unit == "months" ~ age/12,
+          is.na(age_unit) ~ age,
+          TRUE ~ NA_real_)) %>% 
+
+    # 以上是上游清洗步骤已经讨论过了
+    #####################################################
+    mutate(
+          # 年龄组：定制
+          age_cat = epikit::age_categories(age_years, breakers = c(0, 5, 10, 15, 20, 30, 50, 70)),
+        
+          # 年龄组：0至85岁，每组5岁间隔
+          age_cat5 = epikit::age_categories(age_years, breakers = seq(0, 85, 5)))
+
+
+```
 
 
 
@@ -2404,6 +2740,82 @@ linelist <- linelist_raw %>%
           date_onset > as.Date("2013-06-01") | (is.na(date_onset) & !hospital %in% c("Hospital A", "Hospital B")))
 ```
 
+
+
+```{r}
+# 数据清洗“管道”链（以原始数据开始，然后将其传递给数据清洗步骤）
+##################################################################################
+
+# 数据清洗管道链开始
+###########################
+linelist <- linelist_raw %>%
+    
+    # 标准化列名语法
+    janitor::clean_names() %>% 
+    
+    # 手动重命名列
+           # 新名               # 原名
+    rename(date_infection       = infection_date,
+           date_hospitalisation = hosp_date,
+           date_outcome         = date_of_outcome) %>% 
+      
+    # 删除列
+    select(-c(row_num, merged_header, x28)) %>% 
+  
+    # 数据去重
+    distinct() %>% 
+
+    # 添加新列
+    mutate(bmi = wt_kg / (ht_cm/100)^2) %>% 
+  
+    # 转换一些列的类
+    mutate(across(contains("date"), as.Date), 
+           generation = as.numeric(generation),
+           age        = as.numeric(age)) %>% 
+      
+    # 新增列：入院延迟
+    mutate(days_onset_hosp = as.numeric(date_hospitalisation - date_onset)) %>% 
+    
+  # 清洗hospital列的值
+    mutate(hospital = recode(hospital,
+                      # 原值              = 新值
+                      "Mitylira Hopital"  = "Military Hospital",
+                      "Mitylira Hospital" = "Military Hospital",
+                      "Military Hopital"  = "Military Hospital",
+                      "Port Hopital"      = "Port Hospital",
+                      "Central Hopital"   = "Central Hospital",
+                      "other"             = "Other",
+                      "St. Marks Maternity Hopital (SMMH)" = "St. Mark's Maternity Hospital (SMMH)"
+                      )) %>% 
+    
+    mutate(hospital = replace_na(hospital, "Missing")) %>% 
+
+    # 创建age_year列（用age和age_unit两列）
+    mutate(age_years = case_when(
+          age_unit == "years" ~ age,
+          age_unit == "months" ~ age/12,
+          is.na(age_unit) ~ age,
+          TRUE ~ NA_real_)) %>% 
+
+    mutate(
+          # 年龄组：定制
+          age_cat = epikit::age_categories(age_years, breakers = c(0, 5, 10, 15, 20, 30, 50, 70)),
+        
+          # 年龄组：0至85岁，每组5岁间隔
+          age_cat5 = epikit::age_categories(age_years, breakers = seq(0, 85, 5))) %>% 
+  
+    # 以上是上游清洗步骤已经讨论过了
+    #####################################################
+
+    filter(
+          # 仅保留case_id非缺省行
+          !is.na(case_id),  
+          
+          # 同时筛选保留第2次暴发病例
+          date_onset > as.Date("2013-06-01") | (is.na(date_onset) & !hospital %in% c("Hospital A", "Hospital B")))
+
+
+```
 
 
 
