--- a/new_pages/cleaning.Rmd
+++ b/new_pages/cleaning.Rmd
@@ -15,14 +15,14 @@ This page demonstrates common steps used in the process of "cleaning" a dataset,
 
 To demonstrate data cleaning, this page begins by importing a raw case linelist dataset, and proceeds step-by-step through the cleaning process. In the R code, this manifests as a "pipe" chain, which references the "pipe" operator ` %>%` that passes a dataset from one operation to the next.  
 
-为阐述数据清洗，本节首先导入原始病例一览表数据集，然后逐步演示清理过程。在 R 代码中，这个过程可以用一个“管道”链完成：应用管道操作符“%>%”将数据从一个操作传递到下一个操作。
+为阐述数据清洗，本节首先导入原始病例一览表数据集，然后逐步演示清洗过程。在 R 代码中，这个过程可以用一个“管道”链完成：应用管道操作符“%>%”将数据从一个操作传递到下一个操作。
 
 ### Core functions {.unnumbered}  
 ### 主要函数 {#core_functions}
 
 This handbook emphasizes use of the functions from the [**tidyverse**](https://www.tidyverse.org/) family of R packages. The essential R functions demonstrated in this page are listed below.  
 
-本手册强调使用[**tidyverse**](https://www.tidyverse.org/)系列 R 包中的函数。下面列出了本节中演示的基本 R 函数。
+本手册推荐使用[**tidyverse**](https://www.tidyverse.org/)系列 R 包中的函数。下面列出了本节中演示的基本 R 函数。
 
 
 Many of these functions belong to the [**dplyr**](https://dplyr.tidyverse.org/) R package, which provides "verb" functions to solve data manipulation challenges (the name is a reference to a "data frame-[plier](https://www.thefreedictionary.com/plier#:~:text=also%20ply%C2%B7er%20(pl%C4%AB%E2%80%B2,holding%2C%20bending%2C%20or%20cutting.)"). **dplyr** is part of the **tidyverse** family of R packages (which also includes **ggplot2**, **tidyr**, **stringr**, **tibble**, **purrr**, **magrittr**, and **forcats** among others).  
